--- a/index.html
+++ b/index.html
@@ -218,7 +218,22 @@
       <script>
         // Initialize EmailJS
         emailjs.init('zNlaqaX53MJFOmei0'); // Replace with your EmailJS user ID
-
+         
+      // Handle form submission
+      document.getElementById('contact-form').addEventListener('submit', function (event) {
+          event.preventDefault(); // Prevent the form from submitting the traditional way
+      
+          // Send email using EmailJS
+          emailjs.sendForm('service_4n7zide', 'template_8new6yf', this)
+              .then(function (response) {
+                  console.log('Success:', response);
+                  alert('Submission Completed.');
+                  location.reload(); // Refresh the page after success
+              }, function (error) {
+                  console.error('Error:', error);
+                  alert('Submission failed.\nPlease contact the administrator if it keeps failing.');
+              });
+      });
         // Handle form submission
         document.getElementById('contact-form').addEventListener('submit', function (event) {
             event.preventDefault(); // Prevent the form from submitting the traditional way
