--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       <style>
         body, html {
           height: 100%;
-          margin: 0;
           overflow: hidden;
           display: flex;
           justify-content: center;
@@ -31,8 +30,6 @@
 
         .background-container {
           position: relative;
-          width: 80vw;
-          height: 100vh;
           background-image: url('main_background.png');
           background-size: contain;
           background-position: center;
@@ -72,8 +69,14 @@
          
             /* Media query for mobile (up to 1023px) */
          @media (max-width: 1023px) {
+           .background-container {
+             width: 100%;
+             height: 100vh;
+             background-size: cover; /* Ensure the background fits within the screen, but doesn't get cut off */
+             background-position: center center; /* Adjust background position for mobile */
+           }
            .title-container{
-             margin-top: 90px;
+             margin-top: 70px;
              margin-bottom: 2px;
              font-family: 'Noto Serif KR', serif;
              text-align: center;
@@ -95,14 +98,14 @@
              font-size: 15px;
              margin-top: 4px;
              background-color: rgba(255, 255, 255, 0.8);
-             padding: 10px;
-             border-radius: 5px;
+             padding: 5px;
+             border-radius: 3px;
              width: 200px;
              box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
            }
            .contact-form-container label {
              display: block;
-             margin-bottom: 4px;
+             margin-bottom: 2px;
              font-weight: bold;
            }
    
@@ -127,7 +130,13 @@
          
          /* Optional: Adjust text sizes on larger screens if needed */
          @media (min-width: 1024px) {
-           .title-container {
+           .background-container {
+             width: 80vw;
+             height: 100vh;
+             background-size: contain; /* Ensure the background fits within the screen, but doesn't get cut off */
+             background-position: center center; /* Adjust background position for mobile */
+           }
+            .title-container {
              margin-top: 90px;
              margin-bottom: 5px;
              font-family: 'Noto Serif KR', serif;
