--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
          <!-- Contact Form Section -->
          <div class="contact-form-container">
             <form id="contact-form">
-                <label for="name">Names of all individuals attending:</label>
+                <label for="name">Names:</label>
                 <input type="text" id="name" name="name" required><br>
             
-                <label for="number">Number of individuals attending:</label>
+                <label for="number">Number:</label>
                 <input type="text" id="number" name="number" required><br>
             
                 <label for="message">Send a Message:</label>
