--- a/index.html
+++ b/index.html
@@ -200,8 +200,7 @@
          </div>
          <div class="text-container">
             <p>
-               Please kindly send your RSVP<br />
-               by April 5th<br />
+               Please kindly send your RSVP by April 5th<br />
                Thank you!<br />
             </p>
          </div>
@@ -209,10 +208,10 @@
          <!-- Contact Form Section -->
          <div class="contact-form-container">
             <form id="contact-form">
-                <label for="name">Names:</label>
+                <label for="name">Names of all individuals attending:</label>
                 <input type="text" id="name" name="name" required><br>
             
-                <label for="number">Number:</label>
+                <label for="number">Number of individuals attending:</label>
                 <input type="text" id="number" name="number" required><br>
             
                 <label for="message">Send a Message:</label>
